Colaboratory commit testing

--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODVwyVUjgarnPS99h2P/9E",
+      "authorship_tag": "ABX9TyMZdbd+rsBCL22N5OPiVkDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,7 @@
         "id": "iG2CtobHA47z"
       },
       "source": [
+        "# git commit testing from google colab\n",
         "# CS390-NIP GAN lab\n",
         "# Max Jacobson / Sri Cherukuri / Anthony Niemiec\n",
         "# FA2020\n",
