README.md file edited to record some hyperparameters

--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -72,7 +72,7 @@
         "    IMAGE_SHAPE = (IH, IW, IZ) = (28, 28, 1)\n",
         "    CLASSLIST = [\"top\", \"trouser\", \"pullover\", \"dress\", \"coat\", \"sandal\", \"shirt\", \"sneaker\", \"bag\", \"ankle boot\"]\n",
         "    # TODO: choose a label to train on from the CLASSLIST above\n",
-        "    LABEL = \"coat\"\n",
+        "    LABEL = \"shirt\"\n",
         "\n",
         "elif DATASET == \"cifar_10\":\n",
         "    IMAGE_SHAPE = (IH, IW, IZ) = (32, 32, 3)\n",
@@ -85,7 +85,7 @@
         "\n",
         "# file prefixes and directory\n",
         "OUTPUT_NAME = DATASET + \"_\" + LABEL\n",
-        "OUTPUT_DIR = \"./outputs/\" + OUTPUT_NAME\n",
+        "OUTPUT_DIR = \"./drive/My Drive/Colab Notebooks/lab4 outputs/\" + OUTPUT_NAME\n",
         "\n",
         "# NOTE: switch to True in order to receive debug information\n",
         "VERBOSE_OUTPUT = False\n",
@@ -130,10 +130,14 @@
         "# Model that discriminates between fake and real dataset images\n",
         "def buildDiscriminator():\n",
         "    model = Sequential()\n",
-        "\n",
-        "    # TODO: build a discriminator which takes in a (28 x 28 x 1) image - possibly from mnist_f\n",
+        "    # DONE: build a discriminator which takes in a (28 x 28 x 1) image - possibly from mnist_f  | Reference: Gan Class Slide Page 12\n",
         "    #       and possibly from the generator - and outputs a single digit REAL (1) or FAKE (0)\n",
-        "\n",
+        "    model.add(Flatten(input_shape = IMAGE_SHAPE))\n",
+        "    model.add(Dense(512))\n",
+        "    model.add(LeakyReLU(alpha = 0.2))\n",
+        "    model.add(Dense(256))\n",
+        "    model.add(LeakyReLU(alpha = 0.2))\n",
+        "    model.add(Dense(1, activation = \"sigmoid\"))\n",
         "    # Creating a Keras Model out of the network\n",
         "    inputTensor = Input(shape = IMAGE_SHAPE)\n",
         "    return Model(inputTensor, model(inputTensor))\n",
@@ -141,17 +145,26 @@
         "# Model that generates a fake image from random noise\n",
         "def buildGenerator():\n",
         "    model = Sequential()\n",
-        "\n",
-        "    # TODO: build a generator which takes in a (NOISE_SIZE) noise array and outputs a fake\n",
+        "    # DONE: build a generator which takes in a (NOISE_SIZE) noise array and outputs a fake.    | Reference: Gan Class Slide Page 10\n",
         "    #       mnist_f (28 x 28 x 1) image\n",
-        "\n",
+        "    model.add(Dense(256, input_dim=NOISE_SIZE))\n",
+        "    model.add(LeakyReLU(alpha = 0.2))\n",
+        "    model.add(BatchNormalization(momentum = 0.8))\n",
+        "    model.add(Dense(512))\n",
+        "    model.add(LeakyReLU(alpha = 0.2))\n",
+        "    model.add(BatchNormalization(momentum = 0.8))\n",
+        "    model.add(Dense(1024))\n",
+        "    model.add(LeakyReLU(alpha = 0.2))\n",
+        "    model.add(BatchNormalization(momentum = 0.8))\n",
+        "    model.add(Dense(IMAGE_SIZE, activation = \"tanh\"))\n",
+        "    model.add(Reshape(IMAGE_SHAPE))\n",
         "    # Creating a Keras Model out of the network\n",
         "    inputTensor = Input(shape = (NOISE_SIZE,))\n",
         "    return Model(inputTensor, model(inputTensor))\n",
         "\n",
         "def buildGAN(images, epochs = 40000, batchSize = 32, loggingInterval = 0):\n",
         "    # Setup\n",
-        "    opt = Adam(lr = 0.0002)\n",
+        "    opt = Adam(lr = 0.0002) #this is the learning rate for both discriminator and generator\n",
         "    loss = \"binary_crossentropy\"\n",
         "\n",
         "    # Setup adversary\n",
